--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,19 @@
-/* Add CSS Styling */
+.odd {
+    background-color: rgb(255, 0, 106);
+    font-family: Verdana, 'DejaVu Sans', sans-serif;
+}
+
+#one {
+    color: blue;
+    font-size: 36px;
+}
+
+#two {
+    background-color: rgb(105, 255, 153);
+    font-size: 24px;
+    font-weight: 700;
+}
+
+#three {
+    font-size: 24px;
+}
